<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">viewPagerTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_main">MainActivity</string>
    <string name="title_activity_main_choose">MainActivity</string>
    <string name="ClientText"><b>此处</b></string>
    <string name="userName">sa</string>
    <string name="passWord">1212345</string>
    <string name="dbName">MusicMessage</string>
    <string name="dbURL">jdbc:jtds:sqlserver://192.168.1.102:1433/MusicMessage</string>
    <string name="submit">确定</string>
    <string name="cancel">取消</string>

<!--      Edit activity -->


    <!-- Labels next to the start and end time edit boxes -->
    <string name="start_label">开始:</string>
    <string name="end_label">结束:</string>
    <string name="edit_intent">编辑</string>
    <string name="time_seconds">秒数</string>

    <!--
         After you save a notification or ringtone and have more options
         for what to do with them
    -->
    <string name="what_to_do_with_ringtone">已保存！要将其设为默认铃声或分配到某个联系人吗？</string>
    <string name="set_default_notification">已保存！要将其设为默认通知吗？</string>
    <string name="make_default_ringtone_button">设为默认</string>
    <string name="choose_contact_ringtone_button">分配到联系人</string>
    <string name="do_nothing_with_ringtone_button">关闭</string>
    <!-- Progress dialog text for loading or saving... -->
    <string name="progress_dialog_loading">载入中...</string>
    <string name="progress_dialog_saving">保存中...</string>

    <!-- Image button descriptions for accessibility -->

    <string name="start_marker">开始标记</string>
    <string name="end_marker">结束标记</string>
    <string name="rewind">倒回</string>
    <string name="play">开始</string>
    <string name="stop">停止</string>
    <string name="ffwd">快进</string>
    <string name="zoom_in">放大</string>
    <string name="zoom_out">缩小</string>
    <string name="save_button">保存</string>

<!--      Menu items -->

    <string name="menu_save">保存</string>
    <string name="menu_reset">重新设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_show_all_audio">显示所有的音频</string>

<!--      Context menu items -->

    <string name="context_menu_edit">编辑</string>
    <string name="context_menu_delete">删除</string>
    <string name="context_menu_default_ringtone">设置作为默认铃声</string>
    <string name="context_menu_contact">指定到联系人</string>
    <string name="context_menu_default_notification">设置作为默认通告提示音</string>

<!--      File Save dialog -->

    <string name="file_save_title">保存为:</string>
    <string name="file_save_button_save">保存</string>
    <string name="file_save_button_cancel">取消</string>
    <string name="ringtone_type_label">类型:</string>
    <string name="type_music">音乐</string>
    <string name="type_alarm">警告</string>
    <string name="type_notification">通告</string>
    <string name="type_ringtone">铃声</string>
    <string name="ringtone_name_label">名称:</string>
    <string name="artist_name">音乐快剪</string>

<!--      Delete confirmation dialog -->

    <string name="delete_ringtone">删除铃声</string>
    <string name="delete_alarm">删除警报</string>
    <string name="delete_notification">删除通告</string>
    <string name="delete_music">删除音乐</string>
    <string name="delete_audio">删除音频</string>
    <string name="confirm_delete_ringdroid">你确定吗?</string>
    <string name="confirm_delete_non_ringdroid">你确定吗?  这个文件用铃声不能创建!</string>
    <string name="delete_ok_button">删除</string>
    <string name="delete_cancel_button">取消</string>
    <string name="delete_failed">不能删除文件</string>

<!--      Success and error messages -->

    <string name="alert_title_success">成功</string>
    <string name="alert_title_failure">错误</string>
    <string name="alert_ok_button">确定</string>
    <string name="alert_yes_button">是的，可以!</string>
    <string name="alert_no_button">不，谢谢.</string>
    <string name="save_success_message">保存成功!</string>
    <string name="default_ringtone_success_message">改变默认铃声</string>
    <string name="default_notification_success_message">改变默认通告音</string>
    <string name="play_error">不能打开这种媒体文件</string>
    <string name="no_unique_filename">无法找到文件名</string>
    <string name="delete_tmp_error">删除临时文件错误</string>
    <string name="record_error">启动录音机时出错</string>
    <string name="too_small_error">无法保存过小的文件，请尝试使其更长。</string>
    <string name="write_error">写文件时出错</string>
    <string name="read_error">读文件时出错</string>
    <string name="no_space_error">你的sd卡满了，删除点东西吧</string>
    <string name="no_extension_error">对不起音乐快剪不能编辑非mp3或wav的格式</string>

<!--      Choose Contact Activity -->

    <string name="choose_contact_title">分配铃声到哪个联系人？</string>
    <string name="success_contact_ringtone">铃声成功分配到：</string>
    <string name="title_activity_add_msg">AddMsgActivity</string>

</resources>
