<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

<LinearLayout 
    android:id="@+id/noPathLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@color/snow"
    android:visibility="visible">
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="未选取歌曲，点击"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        ></TextView>
	<TextView
        android:id="@+id/clientText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ClientText"
        android:gravity="center_vertical"
        android:textColor="@color/darkred"
        ></TextView>
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="选择。"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        ></TextView>
  	</LinearLayout>
<LinearLayout 
    android:id="@+id/hasPathLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/titleText"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="暂无歌曲"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:textColor="@color/darkred"
        ></TextView>
    
    <AbsoluteLayout
       android:layout_width="wrap_content" 
       android:layout_height="0px"
       android:layout_weight="1">

      <ImageView android:id="@+id/bkgnd"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:scaleType="centerCrop"
       android:src="@drawable/bkgnd" />

      <com.example.ViewClass.WaveformView android:id="@+id/waveform"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent" />

      <com.example.ViewClass.MarkerView android:id="@+id/startmarker"
        android:nextFocusDown="@+id/endmarker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/marker_left"
        android:contentDescription="@string/start_marker" 
        />

      <com.example.ViewClass.MarkerView android:id="@+id/endmarker"
        android:nextFocusUp="@+id/startmarker"
        android:nextFocusDown="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/marker_right"
        android:contentDescription="@string/end_marker" />

    </AbsoluteLayout>

    <TextView android:id="@+id/info"
       android:nextFocusUp="@+id/endmarker"
       android:nextFocusDown="@+id/play"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       style="@style/AudioFileInfoOverlayText"
       android:gravity="center" />

    <LinearLayout
     style="@style/ToolbarBackground"
     android:layout_width="fill_parent" 
     android:layout_height="124dip"
     android:gravity="center" >

    <LinearLayout
     style="@style/ToolbarBackground"
     android:layout_width="fill_parent" 
     android:layout_height="62dip"
     android:gravity="center_vertical" >

      <LinearLayout
         android:layout_width="wrap_content" 
         android:layout_height="fill_parent"
         android:layout_marginTop="6dip"
         android:layout_marginLeft="5dip"
         android:layout_marginRight="5dip"
         android:gravity="center"
         android:orientation="vertical">

        <TextView
           android:id="@+id/mark_start"
           android:text="@string/start_label"
           android:textColor="#ffffffff"
           android:textSize="12sp"
           android:textStyle="bold"
           android:clickable="true"
           android:layout_width="wrap_content" 
           android:layout_height="31dip" />

        <TextView
           android:id="@+id/mark_end"
           android:text="@string/end_label"
           android:textColor="#ffffffff"
           android:textSize="12sp"
           android:textStyle="bold"
           android:clickable="true"
           android:layout_width="wrap_content" 
           android:layout_height="31dip" />

      </LinearLayout>

      <LinearLayout
         android:layout_width="wrap_content" 
         android:layout_height="fill_parent"
	 	android:layout_marginRight="5dip"
         android:gravity="center"
         android:orientation="vertical">

        <EditText android:id="@+id/et_start"
           android:textSize="11sp"
	   	   android:layout_marginTop="5dip"
           android:layout_width="60dip"
           android:layout_height="31dip"
           android:contentDescription="@string/start_label" />

        <EditText android:id="@+id/et_end"
           android:textSize="11sp"
           android:layout_width="60dip"
           android:layout_height="31dip"
           android:contentDescription="@string/end_label" />

      </LinearLayout>

      <LinearLayout style="@style/VerticalDividerLeft" />
      <LinearLayout style="@style/VerticalDividerRight" />
        
      <LinearLayout
     style="@style/ToolbarBackground"
     android:layout_width="fill_parent" 
     android:layout_height="62dip"
     android:layout_weight="1"
     android:gravity="center" >
      <ImageButton android:id="@+id/rew"
       android:layout_width="64dip"
       android:layout_height="52dip"
       android:layout_marginTop="6dip"
       android:layout_marginBottom="6dip"
       style="@android:style/MediaButton"
       android:contentDescription="@string/rewind"
       android:src="@drawable/prev" />

      <ImageButton android:id="@+id/play"
       android:layout_width="71dip"
       android:layout_height="52dip"
       android:layout_marginTop="6dip"
       android:layout_marginBottom="6dip"
       style="@android:style/MediaButton"
       android:contentDescription="@string/play"
       android:src="@drawable/play" />

      <ImageButton android:id="@+id/ffwd"
       android:layout_width="64dip"
       android:layout_height="52dip"
       android:layout_marginRight="5dip"
       android:layout_marginTop="6dip"
       android:layout_marginBottom="6dip"
       style="@android:style/MediaButton"
       android:contentDescription="@string/ffwd"
       android:src="@drawable/next" />
	</LinearLayout>
     <LinearLayout style="@style/VerticalDividerLeft" />
      <LinearLayout style="@style/VerticalDividerRight" />
      <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_marginLeft="5dip"
         android:layout_marginRight="5dip"
         android:gravity="center">

        <ImageButton android:id="@+id/save"
         android:layout_width="72dip"
         android:layout_height="52dip"
         android:layout_marginTop="5dip"
         style="@android:style/MediaButton"
         android:src="@drawable/save"
         android:contentDescription="@string/save_button" />
      
    </LinearLayout>
      </LinearLayout>

      
   </LinearLayout>

</LinearLayout>
</LinearLayout>
